# parametric_maize_leaf

./: CMakeLists.txt  README.md  leaf_generation.h  main.cpp
example/: config_leaf_1.7_2.8_0.7_0.05_0.55-7_45.0_30.0--0.3_0.0_0.0_0.0_I3REI.txt
